# engine

./: .ci.yaml  .cirrus.yml  .clang-tidy  .clang-tidy-for-githooks  .clangd  .engine-release.version  .gitattributes  .gitignore  .gn  .travis.yml  3pdeps.json  AUTHORS  BUILD.gn  CONTRIBUTING.md  DEPS  Doxyfile  Engine.xmind  LICENSE  README.md  Wage.txt  analysis_options.yaml  backdrop_filter_diff  clone_flutter.sh  cloudbuild.yaml  deps_flatten.txt  en 2.html  en-US.html  en.html  engine.code-workspace  gaussian_blur_filter_contents.cc  get_source.sh  lumberyard.html  metal.html  ninja_build.sh  osvReport.sarif  pubspec.yaml  pylint-2.7  pylint_main.py  result_template.json  results.sarif  (+5 more)
assets/: BUILD.gn  asset_manager.cc  asset_manager.h  asset_resolver.h  directory_asset_bundle.cc  directory_asset_bundle.h  directory_asset_bundle_unittests.cc  file_asset_bundle.cc  file_asset_bundle.h  native_assets.cc  native_assets.h  native_assets_unittests.cc  zip_asset_store.cc  zip_asset_store.h
ci/: BUILD.gn  analyze.sh  analyze_impl.sh  ban_generated_plugin_registrant_java.sh  build.sh  build_flutter_runner_tests.sh  check_gn_format.py  clang_tidy.sh  compatibility_helper.py  deps_parser.py  deps_parser_tests.py  firebase_testlab.py  firebase_testlab.sh  format.bat  format.sh  licenses.sh  lint.dart  lint.sh  pubspec.yaml  results.sarif  scan_deps.py  scan_flattened_deps.py  scan_flattened_deps_tests.py  test.sh  tree_status.sh
ci/builders/: README.md  linux_android_aot_engine.json  linux_android_debug_engine.json  linux_android_emulator.json  linux_android_emulator_33.json  linux_android_emulator_34.json  linux_android_emulator_api_33.json  linux_android_emulator_debug_on_ci.json  linux_android_emulator_opengles.json  linux_android_emulator_opengles_34.json  linux_android_emulator_skia.json  linux_arm_host_engine.json  linux_clang_tidy.json  linux_framework_smoke.json  linux_fuchsia.json  linux_fuchsia_tests.json  linux_host_engine.json  linux_unopt.json  linux_unopt_debug_no_rbe.json  linux_web_engine.json  linux_web_engine_build.json  linux_web_engine_framework.json  linux_web_framework.json  local_engine.json  mac_android_aot_engine.json  mac_clang_tidy.json  mac_clang_tidy_presubmit.json  mac_host_engine.json  mac_impeller_cmake_example.json  mac_ios_engine.json  mac_ios_engine_profile.json  mac_ios_engine_release.json  mac_ios_engine_repeat_gen_snapshot.json  mac_unopt.json  mac_unopt_debug_no_rbe.json  web_engine.json  windows_arm_host_engine.json  windows_host_engine.json
ci/dev/: README.md  prod_builders.json  try_builders.json
ci/licenses_golden/: excluded_files  licenses_dart  licenses_flutter  licenses_fuchsia  licenses_skia  licenses_third_party  licenses_topaz  tool_signature
ci/test/: format_no_generated_java_test.sh  (+2 more)
common/: BUILD.gn  config.gni  constants.h  exported_symbols.sym  exported_symbols_mac.sym  fuchsia_config.gni  runtime.h  settings.cc  settings.h  task_runners.cc  task_runners.h
flutter_frontend_server/: BUILD.gn  package_incremental.py  pubspec.yaml
flutter_web/: BUILD.gn  libraries.dart  libraries.json
fml/: BUILD.gn  affinity.cc  affinity.h  arraysize.h  ascii_trie.cc  ascii_trie.h  ascii_trie_unittest.cc  ascii_trie_unittests.cc  assert_io.h  backtrace.cc  backtrace.h  backtrace_stub.cc  backtrace_unittests.cc  base32.h  build_config.h  closure.h  command_line.cc  command_line.h  command_line_unittest.cc  compiler_specific.h  concurrent_message_loop.cc  concurrent_message_loop.h  container.h  container_unittests.cc  cpu_affinity.cc  cpu_affinity.h  cpu_affinity_unittests.cc  delayed_task.cc  delayed_task.h  eintr_wrapper.h  endianness.h  export.h  file.cc  file.h  file_mapping.cc  file_mapping.h  file_unittest.cc  gpu_thread_merger.cc  gpu_thread_merger.h  gpu_thread_merger_unittests.cc  (+82 more)
frontend_server/: .packages  BUILD.gn  README.md  package_incremental.py  publish.dart  pubspec.yaml
function_profiler/: BUILD.gn  README.md  function_profiler.cc  function_profiler.h
hotui_server/: BUILD.gn  README.md  pubspec.yaml
shell/: BUILD.gn  config.gni
testing/: BUILD.gn  analyze_core_dump.sh  android_systrace_test.py  assertions_skia.cc  assertions_skia.h  compare_goldens.dart  dart_fixture.cc  dart_isolate_runner.cc  dart_isolate_runner.h  display_list_testing.cc  display_list_testing.h  elf_loader.cc  elf_loader.h  fail_test.dart  fixture_test.cc  fixture_test.h  fixtures_base.cc  fixtures_base.h  impeller_golden_tests_output.txt  logger_listener.h  lsan_suppressions.txt  mock_canvas.cc  mock_canvas.h  mock_canvas_unittests.cc  mock_raster_cache.cc  mock_raster_cache.h  post_task_sync.cc  post_task_sync.h  run_all_unittests.cc  run_tests.gni  run_tests.py  run_tests.sh  sanitizer_suppressions.sh  scenario_app_android_output.txt  single_test.py.tmpl  test_dart_native_resolver.cc  test_gl_surface.cc  test_gl_surface.h  test_metal_context.h  test_metal_context.mm  (+15 more)
trace_event/: BUILD.gn  trace_event.cc  trace_event.h
vulkan/: BUILD.gn  config.gni  skia_vulkan_header.h  swiftshader_path.h  vulkan_application.cc  vulkan_application.h  vulkan_backbuffer.cc  vulkan_backbuffer.h  vulkan_command_buffer.cc  vulkan_command_buffer.h  vulkan_debug_report.cc  vulkan_debug_report.h  vulkan_device.cc  vulkan_device.h  vulkan_handle.cc  vulkan_handle.h  vulkan_image.cc  vulkan_image.h  vulkan_interface.cc  vulkan_interface.h  vulkan_native_surface.cc  vulkan_native_surface.h  vulkan_native_surface_android.cc  vulkan_native_surface_android.h  vulkan_native_surface_embedder.cc  vulkan_native_surface_embedder.h  vulkan_native_surface_magma.cc  vulkan_native_surface_magma.h  vulkan_proc_table.cc  vulkan_proc_table.h  vulkan_provider.cc  vulkan_provider.h  vulkan_skia_proc_table.cc  vulkan_skia_proc_table.h  vulkan_surface.cc  vulkan_surface.h  vulkan_swapchain.cc  vulkan_swapchain.h  vulkan_utilities.cc  vulkan_utilities.h  (+2 more)
wasm/: BUILD.gn
web_sdk/: .gitignore  BUILD.gn  build_sdk.dart  flutter_kernel_sdk.dart  libraries.dart  libraries.json  libraries.yaml  make_combined_sdk.dart  make_combined_sdk.sh  pubspec.yaml  sdk_rewriter.dart  web_sdk.gni
(+7742 files in other folders)
