# Copyright 2013 The Flutter Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//flutter/common/config.gni")

source_set("assets") {
  sources = [
    "asset_manager.cc",
    "asset_manager.h",
    "asset_resolver.h",
  ]

  if (!flutter_no_io) {
    sources += [
      "directory_asset_bundle.cc",
      "directory_asset_bundle.h",
    ]
  }

  deps = [
    "//flutter/common",
    "//flutter/fml",
  ]

  public_configs = [ "//flutter:config" ]
}
