# Copyright 2013 The Flutter Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("config.gni")

config("flutter_config") {
  extra_warnings = []

  if (is_clang) {
    extra_warnings += [
      "-Wshadow-all",
      "-Wno-shadow-uncaptured-local",
      "-Wno-shadow-field-in-constructor",
    ]
  }

  defines = feature_defines_list

  cflags = extra_warnings
  cflags_cc = extra_warnings
  cflags_objc = extra_warnings
}

source_set("common") {
  sources = [
    "settings.cc",
    "settings.h",
    "task_runners.cc",
    "task_runners.h",
  ]

  deps = [
    "$flutter_root/fml",
  ]

  public_configs = [
    ":flutter_config",
    "$flutter_root:config",
  ]
}
