# Copyright 2017 The Flutter Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

source_set("function_profiler") {
  sources = [
    "function_profiler.cc",
    "function_profiler.h",
  ]

  deps = [
    "//flutter/fml:trace_event",
  ]
}
