# Copyright 2013 The Flutter Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//third_party/dart/utils/application_snapshot.gni")


application_snapshot("hotui_server") {
    main_dart = "bin/main.dart"
    deps = [
        "$flutter_root/lib/snapshot:kernel_platform_files",
    ]
    dot_packages = rebase_path(".packages")
    training_args = [
        "--train",
    ]

    inputs = ["lib/hotui_server.dart"]
}
