# Copyright 2013 The Flutter Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

declare_args() {
  # OpenGL depends on swift_shader, which doesn't support arm64
  shell_enable_gl =
      !is_fuchsia && !(target_os == "mac" && target_cpu == "arm64")

  # The logic for enabling Vulkan and Metal is in tools/gn.
  shell_enable_metal = false
  shell_enable_vulkan = false

  shell_enable_software = true
}

declare_args() {
  test_enable_gl = shell_enable_gl
  test_enable_metal = shell_enable_metal

  # The Vulkan unittests are combined with the GL unittests.
  test_enable_vulkan = is_fuchsia || shell_enable_gl
  test_enable_software = shell_enable_software
}
