# Copyright 2013 The Flutter Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

source_set("trace_event") {
  sources = [
    "trace_event.cc",
    "trace_event.h",
  ]

  public_deps = [
    "//flutter/fml",
    "//third_party/dart/runtime:dart_api",
  ]

  if (!is_fuchsia) {
    deps = [
      "//flutter/runtime:libdart",
    ]
  }
}
